--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -1,6 +1,6 @@
 {
   "generator-phaser": {
-    "projectName": "Space War-Battle Day",
+    "projectName": "game",
     "gameFolder": "game"
   }
 }
